# afk

./: .gitignore  CONTRIBUTING.md  ENV_VARS.md  README.md  main2.py  pyproject.toml  suggestion.md
.data/: afk_memory_demo.sqlite3
agent-skill/: README.md
agent-skill/afk-agentic-coding/: SKILL.md
agent-skill/afk-docs-maintainer/: SKILL.md
cookbooks/simple-greeting-agent/: install.sh  main.py
docs/: docs.json  index.mdx
docs/llms/: adapters.md  adapters.mdx  agent-integration.md  agent-integration.mdx  contracts.md  contracts.mdx  control-and-session.md  control-and-session.mdx  index.mdx
scripts/: build_agentic_ai_assets.sh  queue_benchmark.py
src/afk/: __init__.py  quickstart.py
tests/agents/: test_a2a_auth_and_host.py  test_agent_runtime.py  test_google_a2a_adapter.py  test_internal_a2a_protocol.py  test_policy_engine.py  test_prompt_loader.py  test_skill_loader.py  test_subagent_orchestration_telemetry.py  test_versioning.py
tests/core/: test_delegation_chaos.py  test_delegation_engine.py  test_interaction_provider.py  test_runner_chaos.py
tests/evals/: test_budgets_and_assertions.py  test_eval_golden_trace.py  test_fail_policies.py  test_reporting_and_datasets.py  test_suite_execution.py
tests/llms/: test_anthropic_agent_sdk_adapter.py  test_litellm_responses_adapter.py  test_llm_contract.py  test_runtime_streaming.py  test_tool_export.py
tests/mcp/: test_mcp_server.py  test_mcp_store.py
tests/memory/: test_memory_additional_standard.py  test_memory_lifecycle.py  test_memory_models_vector_factory.py  test_memory_store_in_memory.py  (+2 more)
(+215 files in other folders)
