[project]
name = "afk-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "async-lru>=2.1.0",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.1",
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "litellm>=1.81.9",
    "numpy>=2.3.0",
    "openai>=1.0.0",
    "prometheus-client>=0.24.1",
    "pytest>=9.0.2",
    "redis>=7.1.1",
]
